--- a/app/views/dashboard/_recent_matches.html.haml
+++ b/app/views/dashboard/_recent_matches.html.haml
@@ -1,10 +1,10 @@
 .list
-  %h3= 'Recent matches'[]
+  %h3 Recent matches
   %table
     %tr
-      %th.name= 'Team one'[]
-      %th.score= 'Score'[]
-      %th.name= 'Team two'[]
+      %th.name Team one
+      %th.score Score
+      %th.name Team two
       %th &nbsp;
 
     - recent_matches.each do |match|
