--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -4,7 +4,7 @@
 %html{ :xmlns => 'http://www.w3.org/1999/xhtml', :lang => "en" }
   %head
     %title
-      = 'Score Keeper'[]
+      Score Keeper
       - unless @page_title.blank?
         = ' - '
         = @page_title
