--- a/app/views/users/forgot_password.html.haml
+++ b/app/views/users/forgot_password.html.haml
@@ -3,11 +3,11 @@
     Please enter either your username or e-mail address.
 
   %p
-    %label= 'Username'[]
+    %label Username
     = text_field_tag :username
       
   %p  
-    %label= 'E-mail'[]
+    %label E-mail
     = text_field_tag :email
     
   %p
