--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -1,12 +1,12 @@
-- title 'Accounts'[]
+- title 'Accounts'
 .list
   %table
     %tr
-      %th= link_to 'Name'[], :order => 'name'
-      %th= 'Domain'[]
-      %th= 'Users'[]
-      %th= 'Matches'[]
-      %th= link_to 'Created'[], :order => 'created_at'
+      %th= link_to 'Name', :order => 'name'
+      %th Domain
+      %th Users
+      %th Matches
+      %th= link_to 'Created', :order => 'created_at'
     - @accounts.each do |account|
       %tr{ :class => cycle('even', 'odd') }
         %td= link_to h(account.name), account
