--- a/app/views/comparisons/index.html.haml
+++ b/app/views/comparisons/index.html.haml
@@ -1,11 +1,11 @@
 - if @selected_player_ids.size > 0
   #graph
-    %h3= 'Ranking chart'[]
+    %h3 Ranking chart
     - form_tag game_comparisons_path(current_game), :method => :get do
       - @selected_player_ids.each do |player_id|
         = hidden_field_tag 'user[]', player_id
       = select_tag('period', options_for_select(time_periods, @time_period), :onchange => 'this.form.submit();')
-      = submit_tag 'Update'[]
+      = submit_tag 'Update'
     
     .legend
       - @indexed_sorted_players.each do |isp|
@@ -16,7 +16,7 @@
     = render :partial => 'shared/graph', :locals => { :url => game_comparison_url(current_game, @selected_player_ids.join('-'), :period => @time_period, :format => :chart) }
     
 - else
-  #graph= 'Please select users to compare to the right.'[]
+  #graph Please select users to compare to the right.
 
 - content_for :sidebar do
   - form_tag game_comparisons_path(@game), :method => :get, :id => 'compare_users' do
@@ -25,4 +25,4 @@
         = check_box_tag 'user[]', player.id, @selected_player_ids.include?(player.id), :id => "user_#{player.id}"
         = label_tag "user_#{player.id}", player.name
         
-    = submit_tag 'Compare'[]
+    = submit_tag 'Compare'
