--- a/app/views/dashboard/_leaderboard.html.haml
+++ b/app/views/dashboard/_leaderboard.html.haml
@@ -6,17 +6,17 @@
   %table.entry-content{ :id => board_id }
     %thead
       %tr
-        %th= '&nbsp;'
-        %th= '&nbsp;'
+        %th &nbsp;
+        %th &nbsp;
         - if start_at == 1
-          %th= '&nbsp;'
-        %th= 'Person'[]
-        %th= 'Ranking'[]
-        %th= 'Played'[]
-        %th= 'Won'[]
-        %th= 'Lost'[]
-        %th= 'Win %'[]
-        %th{ :title => 'Goal difference average'[] }= 'Diff. avg.'[]
+          %th &nbsp;
+        %th Person
+        %th Ranking
+        %th Played
+        %th Won
+        %th Lost
+        %th Win %
+        %th{ :title => 'Goal difference average' } Diff. avg.
 
     %tbody
       - game_participations.each_with_index do |game_participation, index|
@@ -31,7 +31,7 @@
               - else
                 &nbsp;
           %td
-            = link_to css_image_tag('icons/game.png', :class => 'team', :title => "Show this user's matches"[]), game_matches_path(@game, :filter => game_participation.user_id)
+            = link_to css_image_tag('icons/game.png', :class => 'team', :title => "Show this user's matches"), game_matches_path(@game, :filter => game_participation.user_id)
             = user_link_full(@game, game_participation.user)
           %td= game_participation.ranking
           %td= game_participation.matches_played
@@ -42,5 +42,5 @@
       - reset_cycle
 
   - if start_at == 1
-    .notes= "Numbers in parenthesis: user's position 7 days ago. The arrow indicates position movement."[]
+    .notes Numbers in parenthesis: user's position 7 days ago. The arrow indicates position movement.
   = submit_tag 'Compare', :class => 'submit'
