--- a/app/views/matches/show.html.haml
+++ b/app/views/matches/show.html.haml
@@ -1,23 +1,23 @@
 - title match_title(@match), :show => true
 
 #match
-  %label= 'Played at' + ':'
+  %label Played at:
   = @match.played_at.to_s :long
 
   .rankings
     - [@match.winner, @match.loser].each_with_index do |team, team_index|
       .team.column.span-12{ :class => (team_index == 1 ? 'last' : nil) }
-        %h3= team.winner? ? 'Winner'[] : 'Loser'[]
+        %h3= team.winner? ? 'Winner' : 'Loser'
         .list
           %table
         
             %thead
               %tr
-                %th= 'Player'
-                %th.score= 'Score'
-                %th= 'Before'
-                %th= 'Awarded'
-                %th= 'After'
+                %th Player
+                %th.score Score
+                %th Before
+                %th Awarded
+                %th After
           
             %tbody
               - team.memberships.each_with_index do |membership, index|
@@ -29,7 +29,7 @@
                   %td= membership.points_awarded
                   %td= membership.current_ranking
   
-%h3= 'Comments'
+%h3 Comments
 #comments
   - @comments.each_with_index do |comment, index|
     .comment{ :class => cycle('even', 'odd') }
