--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -14,7 +14,7 @@
   
 - content_for :sidebar do
   #sign_up
-    = link_to 'Sign up'[] + "<span>Sign up for Score Keeper now. It's free.</span>", new_account_path
+    = link_to "Sign up<span>Sign up for Score Keeper now. It's free.</span>", new_account_path
     
   #login
     %h2
@@ -23,6 +23,6 @@
     - form_tag({ :controller => :pages, :action => 'login' }, { :id => 'domain_login' }) do
       = label_tag :domain, 'Domain'
       = text_field_tag :domain, nil, :id => 'domain'
-      .notes= 'Enter the subdomain you signed up with.'
+      .notes Enter the subdomain you signed up with.
     
-      = submit_tag 'Go to login form'[], :class => 'submit'
+      = submit_tag 'Go to login form', :class => 'submit'
