--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -2,11 +2,11 @@
   .content
     = 'Copyright 2007-{this_year} by Lars Sehested'[:copyright, Date.today.year]
     = '&middot;'
-    = link_to 'Project home'[], 'http://scorekeepr.dk/'
+    = link_to 'Project home', 'http://scorekeepr.dk/'
     = '&middot;'
-    = link_to 'Feedback'[], 'http://feedback.scorekeepr.dk/'
+    = link_to 'Feedback', 'http://feedback.scorekeepr.dk/'
     = '&middot;'
-    = link_to 'Issue tracker'[], 'http://code.google.com/p/scorekeeper/issues/list'
+    = link_to 'Issue tracker', 'http://code.google.com/p/scorekeeper/issues/list'
     = '&middot;'
-    = link_to 'Source code'[], 'http://github.com/larssg/score-keeper/tree/master'
+    = link_to 'Source code', 'http://github.com/larssg/score-keeper/tree/master'
 
