--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -1,21 +1,21 @@
-- title 'Teams'[], :show => true
+- title 'Teams', :show => true
 
 .list
   %table.teams{ :id => 'teams' }
     %thead
       %tr
-        %th= 'Members'[]
-        %th.ranking= 'Total ranking'[]
-        %th= 'Matches won'[]
-        %th= 'Matches played'[]
-        %th= 'Winning percentage'[]
-        %th{ :colspan => current_game.team_size }= '% of matches'[]
+        %th Members
+        %th.ranking Total ranking
+        %th Matches won
+        %th Matches played
+        %th Winning percentage
+        %th{ :colspan => current_game.team_size } % of matches
         
     %tbody
       - @teams.each do |team|
         %tr{ :class => cycle('even', 'odd') }
           %td.user
-            = link_to css_image_tag('icons/table.png', :class => 'team', :alt => "Show this team's matches"[]), game_matches_path(current_game, :filter => team[:team_ids])
+            = link_to css_image_tag('icons/table.png', :class => 'team', :alt => "Show this team's matches"), game_matches_path(current_game, :filter => team[:team_ids])
             = link_to css_image_tag('icons/chart_bar.png', :class => 'team'), game_team_path(current_game, team[:team_ids])
             = team[:players].collect { |u| user_link(current_game, u)}.join(', ')
 
