--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 - sidebar = render(:partial => 'shared/getting_started') + yield(:sidebar).to_s
 
-!!! Strict
-%html{ :xmlns => 'http://www.w3.org/1999/xhtml', :lang => "en" }
+!!! 5
+%html
   %head
     %title= page_title
     = stylesheet_link_tag 'lib/reset', 'lib/typography', 'lib/grid', 'lib/forms', 'sprites', 'screen', :media => 'screen, projection', :cache => 'cache/all'
