Small template tweaks.

--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -1,12 +1,11 @@
 #ft
   .content
     = 'Copyright 2007-{this_year} by Lars Sehested'[:copyright, Date.today.year]
-    = '&middot;'
+    &middot;
     = link_to 'Project home', 'http://scorekeepr.dk/'
-    = '&middot;'
+    &middot;
     = link_to 'Feedback', 'http://feedback.scorekeepr.dk/'
-    = '&middot;'
+    &middot;
     = link_to 'Issue tracker', 'http://code.google.com/p/scorekeeper/issues/list'
-    = '&middot;'
+    &middot;
     = link_to 'Source code', 'http://github.com/larssg/score-keeper/tree/master'
-
