Dont pack js-files

--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -44,5 +44,5 @@
           .content= sidebar
 
       = render :partial => 'shared/footer'
-    = javascript_include_tag 'swfobject', 'jquery', 'jquery-ui', 'jquery-fx', 'jquery.tablesorter', 'jrails', 'application', :cache => 'cache/all'
+    = javascript_include_tag 'swfobject', 'jquery', 'jquery-ui', 'jquery-fx', 'jquery.tablesorter', 'jrails', 'application'
     = render :partial => 'shared/google_analytics' unless Rails.env == 'development'
