--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -32,5 +32,5 @@
           .content= yield
 
       = render :partial => 'shared/footer'
-    = javascript_include_tag 'swfobject', 'jquery', 'jquery-ui', 'jquery-fx', 'jquery.tablesorter', 'jrails', 'application', :cache => 'cache/all'
+    = javascript_include_tag 'swfobject', 'jquery', 'jquery-ui', 'jquery-fx', 'jquery.tablesorter', 'jrails', 'application'
     = render :partial => 'shared/google_analytics' unless Rails.env == 'development'
