--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -19,8 +19,8 @@
     .members.clear
       - @team_members.each do |user|
         .mugshot
-          - if user.mugshot
-            = link_to image_tag(user.mugshot.public_filename(:thumb), :alt => h(user.name)), game_user_path(current_game, user)
+          - if user.avatar
+            = link_to image_tag(user.avatar(:thumb), :alt => h(user.name)), game_user_path(current_game, user)
           = link_to h(user.name), game_user_path(current_game, user)
 
     .matchlink= link_to css_image_tag('icons/table.png', :class => 'team', :alt => "Show this team's matches") + ' ' + 'Show matches', game_matches_path(current_game, :filter => @ids.join(','))
