--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -5,8 +5,8 @@
     .column.span-9{ :class => index.odd? ? 'last' : nil }
       .user
         .image
-          - if user.mugshot
-            = link_to image_tag(user.mugshot.public_filename(:thumb), :alt => h(user.name)), edit_user_path(user)
+          - if user.avatar
+            = link_to image_tag(user.avatar(:thumb), :alt => h(user.name)), edit_user_path(user)
         .login= user.login
         .name= link_to user.name, edit_user_path(user)
         .role= user.is_admin? ? 'Super Admin' : (user.is_account_admin? ? 'Admin' : 'Normal')
