--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -8,10 +8,10 @@
       - unless @page_title.blank?
         = ' - '
         = @page_title
-    = stylesheet_link_tag 'lib/reset', 'lib/typography', 'lib/grid', 'lib/forms', 'sprites', 'screen', :media => 'screen, projection'
-    = stylesheet_link_tag 'print', :media => 'print'
+    = include_stylesheets :common, :media => 'all'
     /[if IE]
       = stylesheet_link_tag 'lib/ie', :media => 'screen, projection'
+    = include_javascripts :common
     = yield :head
 
   %body.public
@@ -44,5 +44,4 @@
           .content= sidebar
 
       = render :partial => 'shared/footer'
-    = javascript_include_tag 'swfobject', 'jquery', 'jquery-ui', 'jquery-fx', 'jquery.tablesorter', 'rails', 'application', :cache => 'cache/all'
     = render :partial => 'shared/google_analytics' unless Rails.env == 'development'
