Remove jquery.fx and tablesorter.

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -73,11 +73,12 @@ textarea
   #add_match
     :text-align right
   
-    a
+    #add_match_button
       :display block
       :padding-right 21px
       :padding-top 9px
       :color #FFFFFF
+      :cursor pointer
 
     #user_minimum
       :padding-right 21px
