--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,7 +31,7 @@
                 Locked
             - else
               - if enabled_users.size >= current_game.team_size * 2
-                = link_to_function css_image_tag('icons/add.png') + ' ' + 'Add match'[], "scoreKeeper.newMatch.toggle()"
+                #add_match_button= css_image_tag('icons/add.png') + ' ' + 'Add match'[]
               - else
                 - if current_game.team_size * 2 - enabled_users.size == 1
                   #user_minimum= 'Add one more user'[:add_one_more_user]
