--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -1,6 +1,6 @@
 #ft
   .content
-    = 'Copyright 2007-{this_year} by Lars Sehested'[:copyright, Date.today.year]
+    = "Copyright 2007-#{Date.today.year} by Lars Sehested"
     &middot;
     = link_to 'Project home', 'http://scorekeepr.dk/'
     &middot;
