--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -1,4 +1,4 @@
-- title '{first_name} and {second_name}'[:user_and_user, h(@team_members.first.name), h(@team_members.last.name)], :show => true
+- title "#{@team_members.first.name} and #{@team_members.last.name}", :show => true
 
 #graph
   %h3= 'Ranking chart'
