--- a/app/views/dashboard/_logs.html.haml
+++ b/app/views/dashboard/_logs.html.haml
@@ -8,4 +8,4 @@
         = log_link log
         
 - content_for :head do
-  = auto_discovery_link_tag :atom, log_feed_url(current_game), :title => 'Events for {account}'[:event_for_account, current_account.name]
+  = auto_discovery_link_tag :atom, log_feed_url(current_game), :title => "Events for #{current_account.name}"
