--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -17,7 +17,7 @@
 
 - else
   .list
-    = 'There are no games in the system. Please <a href="{new_game_path}">create a game</a> to get started.'[:no_games, new_game_path]
+    = "There are no games in the system. Please <a href="#{new_game_path}">create a game</a> to get started."
 
 - content_for :sidebar do
   %h3 Administration
