--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -8,7 +8,7 @@
     %td.label= f.label :team_size
     %td.field
       - if @game.matches.size > 0
-        = '{team_size}-on-{team_size}'[:team_size, @game.team_size, @game.team_size]
+        = "#{@game.team_size}-on-#{@game.team_size}"
         .notes= 'This value cannot be changed because there are matches in the database.'
       - else
         - (1..3).each do |team_size|
