Renamed from scorekeepr.dk to scorekeeper.dk

--- a/app/views/account_mailer/welcome_message.text.erb
+++ b/app/views/account_mailer/welcome_message.text.erb
@@ -1,6 +1,6 @@
 Welcome to Score Keeper!
 
 Thank you for signing up. You can log in at:
-http://<%= @account.domain %>.scorekeepr.dk/
+http://<%= @account.domain %>.scorekeeper.dk/
 
 / Score Keeper
