--- a/app/views/user_mailer/forgot_password_info.text.erb
+++ b/app/views/user_mailer/forgot_password_info.text.erb
@@ -2,6 +2,6 @@ Hi, <%= @user.name %>
 
 The link below logs you in to Score Keeper. It is a one time link so remember to change your password to something you can remember.
 
-http://<%= @user.account.domain %>.scorekeepr.dk/token_login/<%= @user.login_token %>
+http://<%= @user.account.domain %>.scorekeeper.dk/token_login/<%= @user.login_token %>
 
 / Score Keeper
