--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -2,7 +2,7 @@
   .content
     = "Copyright 2007-#{Date.today.year} by Lars Sehested"
     &middot;
-    = link_to 'Project home', 'http://scorekeepr.dk/'
+    = link_to 'Project home', 'http://scorekeeper.dk/'
     &middot;
     = link_to 'Feedback', 'http://feedback.scorekeepr.dk/'
     &middot;
